# incident-rank-validation

./: .gitignore  .gitleaks.toml  .semgrep.yml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.githooks/: README.md  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
claudedocs/: HUMAN-ADJUDICATION-INSTRUCTIONS.md  IMPLEMENTATION_PROMPTS.md  jetson-handoff.md
claudedocs/memory/: MEMORY.md  correctness-over-speed.md  decision-style-recommendation-first.md  publication-formality-calibration.md  secret-scanning-posture.md
docs/: BOUNDARY-CASES.md  GOLDSET-CODING-GUIDE.md  GOLDSET-LLM-ADJUDICATION-GUIDE.md  GOLDSET-STAFFING.md  HANDOFF.md  METHODOLOGY-CHANGELOG.md  METHODOLOGY-FAQ.md  PRD.md  PROVISIONING-PLAN.md  REVIEWERS.md  RUBRIC-WORKFLOW.md  RUNBOOK.md  SUCCESSOR-PRIMER.md
docs/REVIEWERS/: rock-lambros-rubric.txt
engine/: __init__.py  schema.py
engine/adapters/: __init__.py  base.py  genai_agentic.py  genai_agentic_bias.py  owasp_asi.py  synthetic.py  synthetic_stress.py
engine/calibrate/: batch.py  beta.py  calibrate.py  cv.py  gold_loader.py  gold_schema.py  provenance.py  sampler.py  tally.py  two_frame_sampler.py
engine/classify/: __init__.py  classifier.py  cost_tracker.py  multi_model.py  runpod_client.py  stage2.py  stage2_manifest.py  stage2_prompt.py  stage2_protocol.py  stub.py
engine/cli/: calibration.py  main.py  pipeline.py  pipeline_executor.py  reclassify.py  rubric.py  secrets.py  snapshot.py  synthetic.py
engine/decide/: concordance.py  corpus_b_corroboration.py  kappa.py  measurability.py  multiplicity.py  robustness_multiplicity.py  rollup.py  selection_bias.py  twin_agreement.py
engine/erratum/: lineage.py  merkle.py  models.py  post_hoc.py
engine/model/: censoring.py  diagnostics.py  inference.py  overlap.py  predictive.py  robustness.py  twin.py
engine/monitoring/: wandb_logger.py
engine/prereg/: __init__.py  adjudication.py  attestation.py  gates.py  git_timestamp.py  lock.py  manifest.py  rubric.py  rubric_attestation.py  rubric_io.py  signoff.py
engine/report/: diff.py  narrative.py  narrative_charts.py  narrative_data.py  render.py
engine/repro/: bundle.py
engine/safety/: corpus_mode.py
engine/snapshot/: drift.py  hashing.py  provenance.py
engine/threats/: register.py
engine/vote/: bootstrap.py  loader.py
notebooks/: 2026_top_10_llm_update_what_the_data_says.ipynb  requirements.txt  what_the_data_says_2026.ipynb
notebooks/narrative/: 2026_top_10_llm_update_what_the_data_says.md
projects/owasp-llm/: project.toml
projects/synthetic/: project.toml
projects/synthetic-stress/: project.toml
scripts/: build_rubric.py
tests/: conftest.py  test_bootstrap.py
tests/fixtures/: vote_fixture.xlsx
tests/integration/: test_calibration_e2e.py  test_execute_pipeline.py  test_real_pipeline_e2e.py
tests/proofs/: test_frame_blind_gate.py  test_never_falsely_low.py  test_two_cycle_parity.py
tests/security/: test_stage2_delimiter.py  test_stage2_injection_fixture.py
tests/unit/: test_adapter.py  test_adapter_genai_agentic.py  test_adapter_owasp_asi.py  test_adapter_stress.py  test_adjudicate.py  test_batch.py  test_calibrate.py  test_calibrate_with_gold.py  test_calibration_diagnostic.py  test_censoring.py  test_classifier.py  test_classifier_real.py  test_cli.py  test_concentration_sensitivity.py  test_drift.py  (+60 more)
tools/: adjudicate.py  check_pods.py  deploy_runpod.py  runpod_pods.json
(+82 files in other folders)
