[project]
name = "incident-rank-validation"
version = "0.1.0"
description = "Engine for validating ranked taxonomies against incident corpora."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Rock Lambros" }]
dependencies = [
  "numpy==2.1.3",
  "scipy==1.15.0",
  "numpyro==0.16.1",
  "jax==0.4.35",
  "jaxlib==0.4.35",
  "click==8.1.7",
  "tomli==2.0.2",
  "tomli-w==1.1.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-env==1.1.5",
  "pytest-xdist==3.6.1",
  "mypy==1.13.0",
  "ruff==0.8.4",
  "semgrep==1.99.0",
  "cyclonedx-bom==4.6.1",
  "setuptools==69.5.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["engine*"]

[project.scripts]
incident-rank = "engine.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["engine", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["error"]
markers = ["slow: NUTS / e2e tests"]
env = ["JAX_ENABLE_X64=true", "JAX_PLATFORM_NAME=cpu"]
