[project]
name = "incident-rank-validation"
version = "1.0.0"
description = "Engine for validating ranked taxonomies against incident corpora."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Rock Lambros" }]
dependencies = [
  "numpy==2.1.3",
  "scipy==1.15.0",
  "numpyro==0.16.1",
  "jax==0.4.35",
  "jaxlib==0.4.35",
  "click==8.1.7",
  "tomli==2.0.2",
  "tomli-w==1.1.0",
  "httpx>=0.27,<1.0",
  "openpyxl>=3.1,<4.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-env==1.1.5",
  "pytest-xdist==3.6.1",
  "mypy==1.13.0",
  "ruff==0.8.4",
  "semgrep==1.99.0",
  "cyclonedx-bom==4.6.1",  # upstream blocker for lxml>=6 (CVE-2026-41066); upgrade requires cyclonedx-bom>=5
  "setuptools==78.1.1",
]
# Known transitive CVE blockers (deferred to a scoped dep-upgrade PR):
#   lxml 5.4.0 (CVE-2026-41066, HIGH, XXE) — pinned by cyclonedx-python-lib<8 via cyclonedx-bom==4.6.1
#   protobuf 4.25.9 (CVE-2026-0994, HIGH, recursion bypass) — pinned by opentelemetry-proto v1.25.0 via semgrep==1.99.0
# Both require multi-package upgrades (cyclonedx-bom + semgrep) and re-validation; tracked as supply-chain residuals.

[project.optional-dependencies]
monitoring = ["wandb>=0.19,<1.0"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["engine*"]

[project.scripts]
incident-rank = "engine.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["engine", "tests"]

[[tool.mypy.overrides]]
module = ["scipy.*", "jax.*", "jaxlib.*", "numpyro.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["wandb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
  "error",
  "ignore::FutureWarning:jax",
  "ignore::DeprecationWarning:jax",
  "ignore::FutureWarning:numpyro",
  "ignore:There are not enough devices to run parallel chains:UserWarning",
]
markers = ["slow: NUTS / e2e tests", "timeout: per-test wall-clock timeout hint (seconds)"]
env = ["JAX_ENABLE_X64=true", "JAX_PLATFORM_NAME=cpu"]
